--- a/header.css
+++ b/header.css
@@ -2,4 +2,8 @@
     background-color: #ff943c;
     height: 7.5%;
     box-shadow:0 4px 8px rgba(170, 94, 6, 0.507);
+    padding: 120px;
+}
+.fontnav{
+    font-size: xx-large;
 }
