last navbar fixes + prices added
removi o arquivo do css do header porque era pouco e não tinha necessidade de usar um arquivo só pra ele.

--- a/header.css
+++ b/header.css
@@ -2,5 +2,9 @@
     background-color: #ff943c;
     height: 7.5%;
     box-shadow:0 4px 8px rgba(170, 94, 6, 0.507);
-    padding: 120px;
+    padding: 1rem 0;
+}
+.contheader{
+    height: auto;
+    width: 60%;
 }
