--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,12 @@ nav a, nav img{
 }
 /*CSS body*/
 body{
+    background-color: #cfcfcf;
     height: 100vh;
-    padding-top: 15px;
+    padding-top: 64px;
+}
+.spacing{
+    background-color: white;
 }
 .contmeio{
     height:100vh;
@@ -45,8 +49,11 @@ body{
 .carousel-inner {
     padding: 1em;
 }
-.btn-light{
-    background-color: #acacac;
+.img_pad{
+    border-radius: 5px;
+}
+.btn .btn-light{
+    background-color: #6e6e6e;
 }
 .gradejogos{
     height: 56%;
@@ -62,4 +69,11 @@ body{
 .cont-cards{
     gap: 20px;
     width: 100%;
+}
+/*CSS Carrinho*/
+.infocart,.infocart2{
+    height: 45rem;
+    box-shadow:0 4px 8px rgba(0, 0, 0, 0.15);
+    border: 1px solid rgb(219, 219, 219);
+    border-radius: 5px;
 }
