--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/*CSS navbar + config. gerais + footer - remover comentarios dps*/
 .topo{
     background-color: #ff943c;
     height: 7.5%;
@@ -24,7 +23,6 @@ nav a, nav img{
     background-color: #444444;
     width: 100%;
 }
-/*CSS body*/
 body{
     min-height: 100vh;
     background-color: #cfcfcf;
@@ -77,7 +75,7 @@ body{
     margin-bottom: 2rem;
 }
 .card-jogo{
-    max-width: 12em; /*usei em aq pra ficar prop. ao tamanho do card!!*/
+    max-width: 12em; 
     min-width: 15em; 
 }
 .card-jogo img{
@@ -87,7 +85,6 @@ body{
     gap: 20px;
     width: 100%;
 }
-/*CSS Carrinho*/
 .infocart,.infocart2{
     height: 45rem;
     box-shadow:0 4px 8px rgba(0, 0, 0, 0.15);
@@ -116,32 +113,24 @@ footer p{
 .end_button{
     height: 3em;
 }
-
-/* Novo CSS - Paginas dos JOGOS - Adicionado em 21/06 */
-
 .carousel-box {
     flex: 1;
     min-width: 300px;
     max-width: 600px;
 }
-
 .info-box {
     flex: 1;
     min-width: 300px;
 }
-
 .descricao {
     background-color: #e8e8e8;
 }
-
 .requisitos {
     background-color: #ffffff;
 }
-
 .requisitos h5 {
     font-weight: bold;
 }
-
 ul {
     padding-left: 1.2rem;
 }
